@@ -4596,6 +4596,7 @@ cb_list_registers (void)
 {
 	size_t		i;
 	const char	*name, *t;
+	char name_display[COB_MINI_BUFF];
 
 	/* TODO: implement creation from user-specified list (currently only enable/disable)
 	   Note: will still be able to be referenced if not implemented,
@@ -4616,10 +4617,12 @@ cb_list_registers (void)
 		default: /* CB_FEATURE_DISABLED */
 			continue;
 		}
-		if (strcmp (register_list[i].name, "LENGTH OF") != 0) {
+		if (strcmp (register_list[i].name, "LENGTH OF") != 0
+		 && strcmp (register_list[i].name, "ADDRESS OF") != 0) {
 			name = register_list[i].name;
 		} else {
-			name = _("'LENGTH OF' phrase");
+			snprintf (name_display, COB_MINI_MAX, "'%s' phrase", register_list[i].name);
+			name = (const char *)&name_display;
 		}
 		printf ("%-32s%-16s%s\n", name, t, register_list[i].definition);
 	}
